First working version - needs heavy refactoring... Added:  - Service Validation  - Login  - OpenAIRE Datasources through DSM API Changed:  - Provider / Service / Vocabulary payloads are saved as JSON  - various other fixes