@@ -11,13 +11,17 @@ import gr.madgik.catalogue.openaire.domain.Service;
 import gr.madgik.catalogue.openaire.domain.ServiceBundle;
 import gr.madgik.catalogue.repository.VocabularyRepository;
 import gr.madgik.catalogue.service.VocabularyService;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
+import static gr.madgik.catalogue.openaire.config.CacheConfig.CACHE_UI_VOCABULARIES;
 
 @org.springframework.stereotype.Service
 public class ExtendedVocabulariesService extends VocabularyService implements ExtendedVocabularyOperations {
@@ -33,48 +37,59 @@ public class ExtendedVocabulariesService extends VocabularyService implements Ex
         this.providerService = providerService;
     }
 
+    @Scheduled(fixedRate = 600000) // refresh cache every 10 minutes
+    @CachePut(value = CACHE_UI_VOCABULARIES)
+    public Map<String, List<Value>> cacheVocabularies() {
+        return getControlValuesMap();
+    }
+
     @Override
-//    @Cacheable(value = CACHE_FOR_UI)
+    @Cacheable(value = CACHE_UI_VOCABULARIES)
     public Map<String, List<Value>> getControlValuesMap() {
         Map<String, List<Value>> controlValues = new HashMap<>();
         List<Value> values;
-        FacetFilter providerFilter = new FacetFilter();
-        providerFilter.setQuantity(10000);
 
         // add providers
-        values = this.providerService.get(providerFilter).getResults()
-                .parallelStream()
-                .map(value -> new Value(value.getId(), value.getPayload().getName()))
-                .collect(Collectors.toList());
-        controlValues.put("Provider", values);
+        controlValues.put("Provider", getAllProviders());
+
+        // add services
+        controlValues.put("Service", getAllServices());
 
         // add Resource Organizations from EOSC
         controlValues.put("resourceProviders", getEoscProviders());
-
-        // add services
-        FacetFilter serviceFilter = new FacetFilter();
-        serviceFilter.setQuantity(10000);
-        serviceFilter.addFilter("active", "true");
-        values = this.serviceService.get(serviceFilter).getResults()
-                .parallelStream()
-                .map(value -> new Value(value.getId(), value.getPayload().getName()))
-                .collect(Collectors.toList());
-        controlValues.put("Service", values);
-
 
         // add all vocabularies
         for (Map.Entry<String, List<Vocabulary>> entry : this.getByType().entrySet()) {
             values = entry.getValue()
                     .stream()
                     .map(v -> new Value(v.getId(), v.getName(), v.getParentId()))
-                    .collect(Collectors.toList());
+                    .toList();
             controlValues.put(entry.getKey(), values);
         }
 
         return controlValues;
     }
 
-    private List<Value> getEoscProviders() {
+    List<Value> getAllProviders() {
+        FacetFilter providerFilter = new FacetFilter();
+        providerFilter.setQuantity(10000);
+        return this.providerService.get(providerFilter).getResults()
+                .stream()
+                .map(value -> new Value(value.getId(), value.getPayload().getName()))
+                .toList();
+    }
+
+    List<Value> getAllServices() {
+        FacetFilter serviceFilter = new FacetFilter();
+        serviceFilter.setQuantity(10000);
+        serviceFilter.addFilter("active", "true");
+        return this.serviceService.get(serviceFilter).getResults()
+                .stream()
+                .map(value -> new Value(value.getId(), value.getPayload().getName()))
+                .toList();
+    }
+
+    List<Value> getEoscProviders() {
         RestTemplate restTemplate = new RestTemplate();
         Browsing<Map<String, String>> eoscProviders;
         eoscProviders = restTemplate.getForObject("https://providers.eosc-portal.eu/api/provider/all?status=approved provider&quantity=1000", Browsing.class);
@@ -82,6 +97,6 @@ public class ExtendedVocabulariesService extends VocabularyService implements Ex
 
         return providerList.stream()
                 .map(value -> new Value(value.get("id"), value.get("name")))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
